--- a/MapleStory/MapleStory.vcxproj
+++ b/MapleStory/MapleStory.vcxproj
@@ -213,6 +213,7 @@
     <ClInclude Include="Mob.h" />
     <ClInclude Include="MObject.h" />
     <ClInclude Include="MobManager.h" />
+    <ClInclude Include="MPhysics.h" />
     <ClInclude Include="MPlayer.h" />
     <ClInclude Include="MRoad.h" />
     <ClInclude Include="MSprite.h" />
@@ -257,6 +258,7 @@
     <ClCompile Include="Mob.cpp" />
     <ClCompile Include="MObject.cpp" />
     <ClCompile Include="MobManager.cpp" />
+    <ClCompile Include="MPhysics.cpp" />
     <ClCompile Include="MPlayer.cpp" />
     <ClCompile Include="MRoad.cpp" />
     <ClCompile Include="MSprite.cpp" />
