asset pos and flip clear
충돌 재대로 안뎀

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ MapleStory/x64/Debug/MapleStory.Build.CppClean.log
 x64/Debug/MapleStory.exe
 x64/Debug/MapleStory.ilk
 x64/Debug/MapleStory.pdb
+*.opendb
