맵 코드 깨끗하게, 포탈 추가

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 ################################################################################
 
 /MapleStory/MapleStory
+/.vs/MapleStory/v16/ipch
+/MapleStory/x64/Debug/MapleStory.tlog
+/MapleStory/x64/Debug
+/MapleStory/x64/Release
+/x64
+/.vs/MapleStory/v16/Browse.VC.db
+/.vs/MapleStory/v16/Browse.VC.opendb
