--- a/MapleStory/MapleStory.vcxproj
+++ b/MapleStory/MapleStory.vcxproj
@@ -204,6 +204,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="ISkill.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="MainScene.h" />
     <ClInclude Include="Map.h" />
@@ -250,6 +251,7 @@
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="ISkill.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="MainScene.cpp" />
     <ClCompile Include="Map.cpp" />
