--- a/MapleStory/MapleStory.vcxproj.filters
+++ b/MapleStory/MapleStory.vcxproj.filters
@@ -225,6 +225,9 @@
     <ClInclude Include="MLife.h">
       <Filter>Map</Filter>
     </ClInclude>
+    <ClInclude Include="MLadRop.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MapleStory.cpp">
@@ -373,6 +376,9 @@
     </ClCompile>
     <ClCompile Include="MLife.cpp">
       <Filter>Map</Filter>
+    </ClCompile>
+    <ClCompile Include="MLadRop.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
