--- a/MapleStory/MapleStory.vcxproj.filters
+++ b/MapleStory/MapleStory.vcxproj.filters
@@ -228,6 +228,9 @@
     <ClInclude Include="MLadRop.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="FlashJumpSkill.h">
+      <Filter>Game\Skill</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MapleStory.cpp">
@@ -379,6 +382,9 @@
     </ClCompile>
     <ClCompile Include="MLadRop.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="FlashJumpSkill.cpp">
+      <Filter>Game\Skill</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
