--- a/MapleStory/MapleStory.vcxproj.filters
+++ b/MapleStory/MapleStory.vcxproj.filters
@@ -231,6 +231,9 @@
     <ClInclude Include="MDamageFont.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="FlashJumpSkill.h">
+      <Filter>Game\Skill</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MapleStory.cpp">
@@ -385,6 +388,9 @@
     </ClCompile>
     <ClCompile Include="MDamageFont.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="FlashJumpSkill.cpp">
+      <Filter>Game\Skill</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
