--- a/MapleStory/MapleStory.vcxproj
+++ b/MapleStory/MapleStory.vcxproj
@@ -246,7 +246,7 @@
     <ClInclude Include="ObjectMgr.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="ProneState.h" />
-    <ClInclude Include="ProxyID.h" />
+    <ClInclude Include="ObjectId.h" />
     <ClInclude Include="rapidxml.hpp" />
     <ClInclude Include="rapidxml_iterators.hpp" />
     <ClInclude Include="rapidxml_print.hpp" />
@@ -312,7 +312,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="ProneState.cpp" />
-    <ClCompile Include="ProxyID.cpp" />
+    <ClCompile Include="ObjectId.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="RopeState.cpp" />
     <ClCompile Include="SceneManager.cpp" />
