--- a/MapleStory/MapleStory.vcxproj.filters
+++ b/MapleStory/MapleStory.vcxproj.filters
@@ -234,6 +234,9 @@
     <ClInclude Include="ObjectId.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="MParser.h">
+      <Filter>Xml</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MapleStory.cpp">
@@ -391,6 +394,9 @@
     </ClCompile>
     <ClCompile Include="ObjectId.cpp">
       <Filter>헤더 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MParser.cpp">
+      <Filter>Xml</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
