--- a/MapleStory/MapleStory.vcxproj
+++ b/MapleStory/MapleStory.vcxproj
@@ -226,6 +226,7 @@
     <ClInclude Include="MCharacter.h" />
     <ClInclude Include="MCollision.h" />
     <ClInclude Include="MDamageFont.h" />
+    <ClInclude Include="MEnemy.h" />
     <ClInclude Include="MInput.h" />
     <ClInclude Include="MLadRop.h" />
     <ClInclude Include="MLife.h" />
@@ -288,6 +289,7 @@
     <ClCompile Include="MCharacter.cpp" />
     <ClCompile Include="MCollision.cpp" />
     <ClCompile Include="MDamageFont.cpp" />
+    <ClCompile Include="MEnemy.cpp" />
     <ClCompile Include="MInput.cpp" />
     <ClCompile Include="MLadRop.cpp" />
     <ClCompile Include="MLife.cpp" />
